# .trash

./: Makefile  README.md  StrToken.java  char_count.cpp  get-env.cpp  getline.cpp  in.txt  line_count.cpp  putchar-getchar.cpp  word_count.cpp
learn/PAC2017_LUSolve/: Makefile
learn/Tupler-modified/: Makefile
learn/c/: in.txt  putchar-getchar.cpp
learn/config/source/: simpletokenizer.h  test.cpp
learn/curl_example/curl_test/: BaiduVR.cpp  bdvr.cpp~  cmd.txt  cmd.txt~  curl_s_result.txt  get_http.c  make.sh  out.txt  post  test  test.cpp  voice  voice.cpp  voice.txt
learn/gcc_compiler/: test.i  test.s
learn/java/: CollectionTest.java  StringParse.java  StringParser.java  test.txt  test1.txt
learn/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cfg.xml  cmake_install.cmake  img_smooth  img_smooth.c  my_matrix.xml  opencv_avi_paly  opencv_avi_paly.c  opencv_avi_write  opencv_avi_write.c  opencv_camera_capture  opencv_camera_capture.c  opencv_half_img  opencv_half_img.c  opencv_histogram  opencv_histogram.cpp  opencv_hsv  opencv_hsv.c  opencv_img_smooth  opencv_img_smooth.c  opencv_mat  opencv_mat.c  opencv_match  opencv_match.cpp  opencv_test  opencv_threshold  opencv_threshold.cpp  opencv_xml  opencv_xml.cpp  opencv_xml_read  opencv_xml_read.cpp  opencv_xml_write  opencv_xml_write.cpp  test  test.c
learn/perl/: #re_test.pl#  perl_test.pl  perl_test.pl~  re_test.pl
learn/repo01/: test01
learn/test/: LICENSE.txt  Makefile-example.txt  counter.cpp  file_test.cpp  in.txt  push_relabel.cpp  test.cpp
learn/thrift/: test.thrift
(+83 files in other folders)
